# sapphire

./: Cargo.toml  README.md
.github/workflows/: rust.yml
sps/: Cargo.toml
sps-common/: Cargo.toml
sps-common/src/: config.rs  pipeline.rs
sps-common/src/dependency/: resolver.rs
sps-core/: Cargo.toml
sps-core/src/install/bottle/: exec.rs
sps-core/src/install/cask/: mod.rs
sps-net/: Cargo.toml
sps-net/src/: http.rs  oci.rs
sps/src/cli/: status.rs  update.rs
sps/src/pipeline/: downloader.rs
