[package]
name = "sps-core"
version = "0.1.56"
edition = "2021"
authors = ["Alexander Knott <alexander.knott@posteo.de>", "sps contributors"]
description = "Core library for the sps package manager"
repository = "https://github.com/alexykn/sps"
license = "BSD-3-Clause"

[dependencies]
sps-net = "0.1.56"
sps-common = "0.1.56"

anyhow = "1.0.99"
uuid = { version = "1.18.0", features = ["v4"] }
plist = "1.7.4"                                                                  # For reading Info.plist to get bundle ID
thiserror = "2.0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
env_logger = "0.11.8"
semver = "1.0.26"
dirs = "6.0.0"
xattr = "1.5.1"
walkdir = "2.5.0"
reqwest = { version = "0.12.23", features = ["json", "stream", "blocking"] }
url = "2.5.4"
sha2 = "0.10.9"
indicatif = "0.17.11"
hex = "0.4.3"
object = { version = "0.37.3", features = ["read_core", "write_core", "macho"] }
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
rand = "0.9.2"
infer = "0.19.0"
num_cpus = "1.17.0"
humantime = "2.2.0"
bitflags = { version = "2.9.2", features = ["serde"] }
tracing = "0.1.41"
devtools = "0.3.4"
which = "8.0.0"
toml = "0.9.5"
fs_extra = "1.3.0"
git2 = "0.20.2"
cmd_lib = "1.9.6"
tempfile = "3.20.0"
regex = "1.11.1"
glob = "0.3.3"
flate2 = "1.1.2"
bzip2 = "0.6.0"
tar = "0.4.44"
zip = "4.3.0"                                                                    # Back to original zip crate
chrono = { version = "0.4.41", features = ["serde"] }
async-recursion = "1.1.1"
crossbeam-channel = "0.5.15"
threadpool = "1.8.1"
trash = "5.2.3"
lazy_static = "1.5.0"
